--- a/catapult/AndroidManifest.xml
+++ b/catapult/AndroidManifest.xml
@@ -68,6 +68,20 @@
                 android:value="${packageName}.grid_control" />
         </activity>
 
+        <activity
+            android:name="app.catapult.launcher.settings.SettingsActivity"
+            android:autoRemoveFromRecents="true"
+            android:excludeFromRecents="true"
+            android:label="@string/settings_button_text"
+            android:theme="@style/Theme.Catapult"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 </manifest>
 
