--- a/catapult/AndroidManifest.xml
+++ b/catapult/AndroidManifest.xml
@@ -25,6 +25,8 @@
     Refer comments around specific entries on how to extend individual components.
     -->
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name="app.catapult.launcher.CatapultApp"
         android:backupAgent="com.android.launcher3.LauncherBackupAgent"
