--- a/.github/workflows/build-release-apk.yml
+++ b/.github/workflows/build-release-apk.yml
@@ -3,9 +3,8 @@ name: Build release APK
 on:
   workflow_dispatch:
   push:
-    branches: [ "13" ]
-  pull_request:
-    branches: [ "13" ]
+    tags:
+      - 'v*'
 
 jobs:
   build-release-apk:
@@ -21,9 +20,8 @@ jobs:
       - name: set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          
+          java-version: '17'
+          distribution: 'zulu'
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-home-cache-cleanup: true
@@ -40,10 +38,27 @@ jobs:
           fi
       - name: Build release APK
         run: ./gradlew assembleCatapultRelease
-        
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: Release APK
           path: |
             build/outputs/apk/catapult/release/*.apk
+            
+  publish-github-release:
+    runs-on: ubuntu-latest
+    needs: build-release-apk
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Release APK
+          path: artifacts/release-apk
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: artifacts/release-apk/*.apk
